manifests/bases/juice-shop/default/patch-antiaffinity.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-juice-shop
  namespace: juice-shop
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/instance
                operator: In
                values:
                - my-juice-shop
            topologyKey: "kubernetes.io/hostname"
