manifests/bases/juice-shop/default/patch-replicas.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-juice-shop
  namespace: juice-shop
spec:
  replicas: 2
