manifests/bases/juice-shop/default/patch-resource-requests-limits.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-juice-shop
  namespace: juice-shop
spec:
  template:
    spec:
      containers:
        - name: juice-shop
          resources:
            requests:
              cpu: 10Mi
              memory: 128Mi
            limits:
              cpu: 500Mi
              memory: 256Mi
