manifests/bases/juice-shop/default/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop
  annotations:
    #cert-manager.io/cluster: "letsencrypt-prod"  
    # FIXME uncomment me to get a valid certificate
spec:
  tls:
  - hosts:
    - localhost  # FIXME change me to get a valid certificate
    secretName: juice-shop-tls
  rules:
  - host: localhost  # FIXME change me to get a valid certificate
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-juice-shop
            port:
              number: 3000
