manifests/bases/juice-shop/default/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-nginx-incoming-traffic
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              helm.sh/chart: ingress-nginx
      ports:
        - port: 3000
  egress: []
